--- a/lander.html
+++ b/lander.html
@@ -188,6 +188,6 @@
     <!-- Add your promotional content here -->
   </div>
 
-  <script src="assets/js/red.js" defer></script>
+  <script src="js/red.js" defer></script>
 </body>
 </html>
